// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`greater() should fail when value is not greater than limit 1`] = `
Object {
  "message": "Value should be greater than 5",
  "path": Array [],
  "type": "single",
  "value": 1,
}
`;

exports[`greater() should fail when value is not greater than limit 2`] = `
Object {
  "message": "Value should be greater than 5",
  "path": Array [],
  "type": "single",
  "value": 5,
}
`;

exports[`greater() should fail when value is not greater than limit which is a reference 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be greater than 5",
    "path": Array [
      "b",
    ],
    "type": "single",
    "value": 1,
  },
  "type": "dependence",
  "value": Object {
    "a": 5,
    "b": 1,
  },
}
`;

exports[`greater() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "type": "single",
  "value": 1,
}
`;
